Tue, Aug 23, 2022, 6:10 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
 #link-list {
   position: absolute;
   float: left;
-  top: 50%;
-  left: 50%;
+  top: 80%;
+  right: 5vw;
+}
+
+@media(max-width: 767px) {
+  #link-list {
+    top: 40%;
+    font-size: 1vw;
+  }
 }
