Tue, Aug 23, 2022, 6:17 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,10 @@
   right: 5vw;
   font-size: 1vw;
 }
+
+@media(min-width: 320px) {
+  #link-list {
+    position: flex;
+    justify-content: center;
+  }
+}
