--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 #header>img {
   max-width: 100%;
 }
+
+.list-group-item {
+    /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.1450980392156863);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(8.1px);
+  -webkit-backdrop-filter: blur(8.1px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
