--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
 
 .list-group-item {
     /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.1450980392156863);
+  background: rgba(112, 20, 112, 0.1450980392156863);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(8.1px);
   -webkit-backdrop-filter: blur(8.1px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 
-  color: 
+  color: white;
+  text-shadow: 1px 1px #ff6101;
 }
