--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,5 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   color: white;
-  text-shadow: 1px 1px #ff6101;
+  text-shadow: 1px 1px #1e1848;
 }
