--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   -webkit-backdrop-filter: blur(8.1px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 
-  color: white;
+  color: #ec7300;
+  font-weight: bold;
   text-shadow: 1px 1px #1e1848;
 }
