--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,15 @@
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(8.1px);
-  -webkit-backdrop-filter: blur(8.1px);
+  -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.3);
 
   color: #ec7300;
   font-weight: bold;
   text-shadow: 1px 1px #1e1848;
+}
+
+.list-group-item:hover {
+  color: #fe3700;
+  text-shadow: 1px 1px #3a0ebc;
 }
