--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .list-group-item {
     /* From https://css.glass */
-  background: rgba(112, 20, 112, 0.1450980392156863);
+  background: rgba(30, 24, 72, 0.1450980392156863);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
@@ -19,4 +19,5 @@
 .list-group-item:hover {
   color: #fe3700;
   text-shadow: 1px 1px #3a0ebc;
+  cursor: pointer;
 }
