--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+#App {
+  max-width: 100%;
+}
+
 #header>img {
   max-width: 100%;
 }
@@ -25,4 +29,9 @@
 li>a {
   text-decoration: none;
   color: inherit;
+}
+
+#quemsoueu {
+  position: relative;
+  margin: 10% auto;
 }
