--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 }
 
 .list-group-item:hover, li>a:hover {
-  color: #fe3700;
+  color: #ff6101;
   text-shadow: 1px 1px #3a0ebc;
   cursor: pointer;
 }
@@ -44,18 +44,18 @@ li>a {
 .main-timeline5 .timeline-icon,.main-timeline5 .year{margin:auto;position:absolute;top:0;left:0;bottom:0;right:0}
 .main-timeline5 .timeline:after,.main-timeline5 .timeline:before{content:"";display:block;width:100%;clear:both}
 .main-timeline5 .timeline:before{content:"";width:100%;height:100%;box-shadow:-8px 0 5px -5px rgba(0,0,0,.5) inset;position:absolute;top:0;right:0;z-index:2}
-.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#fe3700;border-right-color:#fe3700;z-index:1;transform:rotate(45deg)}
-.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#fe3700;text-align:center;transform:rotate(-45deg)}
-.main-timeline5 .timeline-content{width:35%;float:right;background:#fe3700;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
-.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#fe3700;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
+.main-timeline5 .timeline-icon{width:210px;height:210px;border-radius:50%;border:25px solid transparent;border-top-color:#ff6101;border-right-color:#ff6101;z-index:1;transform:rotate(45deg)}
+.main-timeline5 .year{display:block;width:110px;height:110px;line-height:110px;border-radius:50%;background:#fff;box-shadow:0 0 20px rgba(0,0,0,.4);font-size:30px;font-weight:700;color:#ff6101;text-align:center;transform:rotate(-45deg)}
+.main-timeline5 .timeline-content{width:35%;float:right;background:#ff6101;padding:30px 20px;margin:50px 0;z-index:1;position:relative}
+.main-timeline5 .timeline-content:before{content:"";width:20%;height:15px;background:#ff6101;position:absolute;top:50%;left:-20%;z-index:-1;transform:translateY(-50%)}
 .main-timeline5 .title{font-size:20px;font-weight:700;color:#fff;margin:0 0 10px}
 .main-timeline5 .description{font-size:16px;color:#fff;line-height:24px;margin:0}
 .main-timeline5 .timeline:nth-child(2n):before{box-shadow:8px 0 5px -5px rgba(0,0,0,.5) inset}
-.main-timeline5 .timeline:nth-child(2n) .timeline-icon{transform:rotate(-135deg);border-top-color:#e97e2e;border-right-color:#e97e2e}
-.main-timeline5 .timeline:nth-child(2n) .year{transform:rotate(135deg);color:#e97e2e}
+.main-timeline5 .timeline:nth-child(2n) .timeline-icon{transform:rotate(-135deg);border-top-color:#701470;border-right-color:#701470}
+.main-timeline5 .timeline:nth-child(2n) .year{transform:rotate(135deg);color:#701470}
 .main-timeline5 .timeline:nth-child(2n) .timeline-content{float:left}
 .main-timeline5 .timeline:nth-child(2n) .timeline-content:before{left:auto;right:-20%}
-.main-timeline5 .timeline:nth-child(2n) .timeline-content,.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{background:#e97e2e}
+.main-timeline5 .timeline:nth-child(2n) .timeline-content,.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{background:#701470}
 .main-timeline5 .timeline:nth-child(3n) .timeline-icon{border-top-color:#13afae;border-right-color:#13afae}
 .main-timeline5 .timeline:nth-child(3n) .year{color:#13afae}
 .main-timeline5 .timeline:nth-child(3n) .timeline-content,.main-timeline5 .timeline:nth-child(3n) .timeline-content:before{background:#13afae}
