Tue, Aug 23, 2022, 8:45 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -56,9 +56,9 @@ li>a {
 .main-timeline5 .timeline:nth-child(2n) .timeline-content{float:left}
 .main-timeline5 .timeline:nth-child(2n) .timeline-content:before{left:auto;right:-20%}
 .main-timeline5 .timeline:nth-child(2n) .timeline-content,.main-timeline5 .timeline:nth-child(2n) .timeline-content:before{background:#701470}
-.main-timeline5 .timeline:nth-child(3n) .timeline-icon{border-top-color:#13afae;border-right-color:#13afae}
-.main-timeline5 .timeline:nth-child(3n) .year{color:#13afae}
-.main-timeline5 .timeline:nth-child(3n) .timeline-content,.main-timeline5 .timeline:nth-child(3n) .timeline-content:before{background:#13afae}
+.main-timeline5 .timeline:nth-child(3n) .timeline-icon{border-top-color:#fe3700;border-right-color:#fe3700}
+.main-timeline5 .timeline:nth-child(3n) .year{color:#fe3700}
+.main-timeline5 .timeline:nth-child(3n) .timeline-content,.main-timeline5 .timeline:nth-child(3n) .timeline-content:before{background:#fe3700}
 .main-timeline5 .timeline:nth-child(4n) .timeline-icon{border-top-color:#105572;border-right-color:#105572}
 .main-timeline5 .timeline:nth-child(4n) .year{color:#105572}
 .main-timeline5 .timeline:nth-child(4n) .timeline-content,.main-timeline5 .timeline:nth-child(4n) .timeline-content:before{background:#105572}
