Thu, Aug 25, 2022, 2:23 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
 }
 
 .list-group-item {
-    /* From https://css.glass */
-  background: rgba(30, 24, 72, 0.1450980392156863);
+  background: rgba(30, 24, 72, 0.6);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
