--- a/src/App.css
+++ b/src/App.css
@@ -87,5 +87,9 @@ li>a {
 #projetos {
   background: #ff3700;
   padding: 2% 2% 5% 2%;
-  color: #000;
+}
+
+#projetos>h3 {
+  color: #222;
+  text-shadow: 2px 1px #ff6101;
 }
