Thu, Aug 25, 2022, 6:33 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -100,4 +100,11 @@ li>a {
   max-width: 150px;
 }
 
-.card
+.card {
+  background: rgba(30, 24, 72, 0.6);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(8.1px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
