--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,18 @@ li>a {
 }
 
 .card {
-  background: rgba(30, 24, 72, 0.6);
+  background: rgba(0, 0, 0, 0.75);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(8.1px);
   border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.card-title {
+  color: #ff6101;
+}
+
+.card-description {
+  color: #fff;
 }
