Thu, Aug 25, 2022, 6:46 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -110,8 +110,8 @@ li>a {
 }
 
 .card-title {
-  color: #ff3700;
-  text-decoration: underline;
+  color: #fc7300;
+  background: #1e1848;
 }
 
 .card-text {
