Thu, Aug 25, 2022, 6:54 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,10 @@ li>a {
 }
 
 .project-image {
-  max-width: 150px;
+  max-width: 300px;
+  max-height: 150px;
+  border-radius: 10px;
+  margin-bottom: 3%;
 }
 
 .card {
