--- a/src/App.css
+++ b/src/App.css
@@ -130,7 +130,7 @@ li>a {
 }
 
 #propostas>h3 {
-  color: #ec7300;
+  color: #cc7300;
   text-shadow: 1px 2px #000;
   font-weight: bold;
   font-size: 200%;
