Thu, Aug 25, 2022, 9:53 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -130,8 +130,8 @@ li>a {
 }
 
 #propostas>h3 {
-  color: #cc7300;
-  text-shadow: 1px 2px #000;
+  color: #000;
+  text-shadow: 1px 1px #ec7300;
   font-weight: bold;
   font-size: 200%;
   margin-bottom: 2%;
