Fri, Aug 26, 2022, 7:21 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,13 @@ li>a {
   font-size: 150%;
 }
 
+/* CONTATOS */
+
 h3>strong {
   color: #fe6101;
+}
+
+.social-media-link {
+  text-decoration: none;
+  color: 
 }
