--- a/src/App.css
+++ b/src/App.css
@@ -158,5 +158,9 @@ h3>strong {
 
 .social-media-link {
   text-decoration: none;
-  color: 
+  color: white;
+}
+
+.social-media-link:hover {
+  color: #fe6101;
 }
