Fri, Aug 26, 2022, 7:25 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -159,8 +159,10 @@ h3>strong {
 .social-media-link {
   text-decoration: none;
   color: white;
+  margin-left: 1%;
 }
 
 .social-media-link:hover {
   color: #fe6101;
+  text-decoration: underline;
 }
