--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,10 @@ h3>strong {
 .social-media-link {
   text-decoration: none;
   color: white;
-  word-spacing: 2%;
+}
+
+.social-media-link>span {
+  padding-left: 2%;
 }
 
 .social-media-link:hover {
