Fri, Aug 26, 2022, 7:54 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,10 @@ h3>strong {
   color: #fe6101;
 }
 
+.list-unstyled>li {
+  margin-bottom: 5%;
+}
+
 .social-media-link {
   text-decoration: none;
   color: white;
