Fri, Aug 26, 2022, 8:15 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@ h3>strong {
   text-shadow: none;
 }
 
-.social-media-link:hover, a.fs-5:hover {
+.social-media-link:hover, .group-link:hover {
   color: #fe6101;
   text-decoration: underline;
 }
