Fri, Aug 26, 2022, 8:19 PM +00:00

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,10 @@ h3>strong {
   color: white;
 }
 
+.group-link {
+  color: white;
+}
+
 .social-media-link>span {
   padding-left: 2%;
   text-shadow: none;
