--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,13 @@ li>a {
   padding: 2% 2% 3% 2%;
 }
 
+@media(max-width: 320px) {
+  #projetos {
+    padding: 2% 10% 3% 10%;
+    font-size: 75% !important;
+  }
+}
+
 #projetos>h3 {
   color: #000;
   font-weight: bold;
@@ -153,6 +160,9 @@ li>a {
 @media (max-width: 425px) {
   .tab-text {
     font-size: 100%;
+  }
+  .tab-label {
+    font-size: 100% !important;
   }
 }
 
